@@ -29,82 +29,133 @@
 // =-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=
 //
 // - downloads: Downloads
-//      id: 20??-69
-//      full_path: 20??-[23,28[
-//      url: 20??-[23,28[
-//      start_time: 20??-69
-//      received_bytes: 20??-69
-//      total_bytes: 20??-69
-//      state: 20??-69
-//      end_time: 20??-69
-//      opened: 20??-69
-//      guid: 30-69
-//      current_path: ]23,28]-69
-//      target_path: ]23,28]-69
-//      danger_type: ]23,28]-69
-//      interrupt_reason: ]23,28]-69
-//      hash: 30-69
-//      last_access_time: ]33,36]-69
-//      transient: ]33,36]-69
-//      referrer: ]23,28]-69
-//      site_url: ]30,32]-69
-//      embedder_download_data: ]51,53]-69
-//      tab_url: ]30,32]-69
-//      tab_referrer_url: ]30,32]-69
-//      http_method: 30-69
-//      by_ext_id: ]23,28]-69
-//      by_ext_name: ]23,28]-69
-//      by_web_app_id: ]63,65]-69
-//      etag: ]23,28]-69
-//      last_modified: ]23,28]-69
-//      mime_type: 29-69
-//      original_mime_type: 29-69
+//      - by_ext_id: 28-30, 32-33, 36-45, 48, 50-51, 53, 55-56, 58-59, 61-63,
+//      65-69
+//      - by_ext_name: 28-30, 32-33, 36-45, 48, 50-51, 53, 55-56, 58-59, 61-63,
+//      65-69
+//      - by_web_app_id: 65-69
+//      - current_path: 28-30, 32-33, 36-45, 48, 50-51, 53, 55-56, 58-59, 61-63,
+//      65-69
+//      - danger_type: 28-30, 32-33, 36-45, 48, 50-51, 53, 55-56, 58-59, 61-63,
+//      65-69
+//      - embedder_download_data: 53, 55-56, 58-59, 61-63, 65-69
+//      - end_time: 20, 22-23, 28-30, 32-33, 36-45, 48, 50-51, 53, 55-56, 58-59,
+//      61-63, 65-69
+//      - etag: 28-30, 32-33, 36-45, 48, 50-51, 53, 55-56, 58-59, 61-63, 65-69
+//      - full_path: 20, 22-23
+//      - guid: 30, 32-33, 36-45, 48, 50-51, 53, 55-56, 58-59, 61-63, 65-69
+//      - hash: 30, 32-33, 36-45, 48, 50-51, 53, 55-56, 58-59, 61-63, 65-69
+//      - http_method: 30, 32-33, 36-45, 48, 50-51, 53, 55-56, 58-59, 61-63,
+//      65-69
+//      - id: 20, 22-23, 28-30, 32-33, 36-45, 48, 50-51, 53, 55-56, 58-59,
+//      61-63, 65-69
+//      - interrupt_reason: 28-30, 32-33, 36-45, 48, 50-51, 53, 55-56, 58-59,
+//      61-63, 65-69
+//      - last_access_time: 36-45, 48, 50-51, 53, 55-56, 58-59, 61-63, 65-69
+//      - last_modified: 28-30, 32-33, 36-45, 48, 50-51, 53, 55-56, 58-59,
+//      61-63, 65-69
+//      - mime_type: 29-30, 32-33, 36-45, 48, 50-51, 53, 55-56, 58-59, 61-63,
+//      65-69
+//      - opened: 20, 22-23, 28-30, 32-33, 36-45, 48, 50-51, 53, 55-56, 58-59,
+//      61-63, 65-69
+//      - original_mime_type: 29-30, 32-33, 36-45, 48, 50-51, 53, 55-56, 58-59,
+//      61-63, 65-69
+//      - received_bytes: 20, 22-23, 28-30, 32-33, 36-45, 48, 50-51, 53, 55-56,
+//      58-59, 61-63, 65-69
+//      - referrer: 28-30, 32-33, 36-45, 48, 50-51, 53, 55-56, 58-59, 61-63,
+//      65-69
+//      - site_url: 32-33, 36-45, 48, 50-51, 53, 55-56, 58-59, 61-63, 65-69
+//      - start_time: 20, 22-23, 28-30, 32-33, 36-45, 48, 50-51, 53, 55-56,
+//      58-59, 61-63, 65-69
+//      - state: 20, 22-23, 28-30, 32-33, 36-45, 48, 50-51, 53, 55-56, 58-59,
+//      61-63, 65-69
+//      - tab_referrer_url: 32-33, 36-45, 48, 50-51, 53, 55-56, 58-59, 61-63,
+//      65-69
+//      - tab_url: 32-33, 36-45, 48, 50-51, 53, 55-56, 58-59, 61-63, 65-69
+//      - target_path: 28-30, 32-33, 36-45, 48, 50-51, 53, 55-56, 58-59, 61-63,
+//      65-69
+//      - total_bytes: 20, 22-23, 28-30, 32-33, 36-45, 48, 50-51, 53, 55-56,
+//      58-59, 61-63, 65-69
+//      - transient: 36-45, 48, 50-51, 53, 55-56, 58-59, 61-63, 65-69
+//      - url: 20, 22-23
 //
 // - downloads_url_chains: Download URL chains
-//      CREATED: ]23,28]
-//      id: ]23,28]-69
-//      chain_index: ]23,28]-69
-//      url: ]23,28]-69
+//      - chain_index: 28-30, 32-33, 36-45, 48, 50-51, 53, 55-56, 58-59, 61-63,
+//      65-69
+//      - id: 28-30, 32-33, 36-45, 48, 50-51, 53, 55-56, 58-59, 61-63, 65-69
+//      - url: 28-30, 32-33, 36-45, 48, 50-51, 53, 55-56, 58-59, 61-63, 65-69
 //
 // - keyword_search_terms: Keyword search terms
-//      keyword_id: 20??-69
-//      url_id: 20??-69
-//      lower_term: 20??-41
-//      term: 20??-69
-//      normalized_term: 42-69
+//      - keyword_id: 20, 22-23, 28-30, 32-33, 36-45, 48, 50-51, 53, 55-56,
+//      58-59, 61-63, 65-69
+//      - lower_term: 20, 22-23, 28-30, 32-33, 36-42
+//      - normalized_term: 42-45, 48, 50-51, 53, 55-56, 58-59, 61-63, 65-69
+//      - term: 20, 22-23, 28-30, 32-33, 36-45, 48, 50-51, 53, 55-56, 58-59,
+//      61-63, 65-69
+//      - url_id: 20, 22-23, 28-30, 32-33, 36-45, 48, 50-51, 53, 55-56, 58-59,
+//      61-63, 65-69
 //
 // - urls: URLs
-//      id: 20??-69
-//      url: 20??-69
-//      title: 20??-69
-//      visit_count: 20??-69
-//      typed_count: 20??-69
-//      last_visit_time: 20??-69
-//      hidden: 20??-69
-//      favicon_id: 20??-[33,36[
+//      - activity_time: 42-43, 45, 48, 51, 62, 67
+//      - display_count: 42-43, 45, 48, 51, 62, 67
+//      - display_time: 42-43, 45, 48, 51, 62, 67
+//      - favicon_id: 20, 22-23, 28-30, 32-33
+//      - hidden: 20, 22-23, 28-30, 32-33, 36-45, 48, 50-51, 53, 55-56, 58-59,
+//      61-63, 65-69
+//      - id: 20, 22-23, 28-30, 32-33, 36-45, 48, 50-51, 53, 55-56, 58-59,
+//      61-63, 65-69
+//      - last_display: 42-43, 45, 48, 51, 62, 67
+//      - last_visit_time: 20, 22-23, 28-30, 32-33, 36-45, 48, 50-51, 53, 55-56,
+//      58-59, 61-63, 65-69
+//      - links_clicked_count: 42-43, 45, 48, 51, 62, 67
+//      - open_time: 42-43, 45, 48, 51, 62, 67
+//      - title: 20, 22-23, 28-30, 32-33, 36-45, 48, 50-51, 53, 55-56, 58-59,
+//      61-63, 65-69
+//      - typed_count: 20, 22-23, 28-30, 32-33, 36-45, 48, 50-51, 53, 55-56,
+//      58-59, 61-63, 65-69
+//      - url: 20, 22-23, 28-30, 32-33, 36-45, 48, 50-51, 53, 55-56, 58-59,
+//      61-63, 65-69
+//      - visit_count: 20, 22-23, 28-30, 32-33, 36-45, 48, 50-51, 53, 55-56,
+//      58-59, 61-63, 65-69
+//
+// - visited_links: Visited links
+//      - frame_url: 67-69
+//      - id: 67-69
+//      - link_url_id: 67-69
+//      - top_level_url: 67-69
+//      - visit_count: 67-69
 //
 // - visits: Visits
-//      id: 20??-69
-//      url: 20??-69
-//      visit_time: 20??-69
-//      from_visit: 20??-69
-//      transition: 20??-69
-//      segment_id: 20??-69
-//      is_indexed: 20??-[23,28[
-//      visit_duration: ]20,22]-69
-//      incremented_omnibox_typed_score: ]39,41]-69
-//      publicly_routable: 43-[48,50[
-//      opened_visit: ]48,50]-69
-//      originator_cache_guid: ]53,55]-69
-//      originator_visit_id: ]53,55]-69
-//      originator_from_visit: 56-69
-//      originator_opener_visit: 56-69
-//      is_known_to_sync: 59-69
-//      consider_for_ntp_most_visited: 63-69
-//      external_referrer_url: 66-69
-//      visited_link_id: 67-69
-//      app_id: 69-69
-
+//      - app_id: 69
+//      - consider_for_ntp_most_visited: 63, 65-69
+//      - external_referrer_url: 66-69
+//      - from_visit: 20, 22-23, 28-30, 32-33, 36-45, 48, 50-51, 53, 55-56,
+//      58-59, 61-63, 65-69
+//      - id: 20, 22-23, 28-30, 32-33, 36-45, 48, 50-51, 53, 55-56, 58-59,
+//      61-63, 65-69
+//      - incremented_omnibox_typed_score: 40-45, 48, 50-51, 53, 55-56, 58-59,
+//      61-63, 65-69
+//      - is_indexed: 20, 22-23, 29, 32, 39, 41
+//      - is_known_to_sync: 59, 61-63, 65-69
+//      - opener_visit: 50-51, 53, 55-56, 58-59, 61-63, 65-69
+//      - originator_cache_guid: 55-56, 58-59, 61-63, 65-69
+//      - originator_from_visit: 56, 58-59, 61-63, 65-69
+//      - originator_opener_visit: 56, 58-59, 61-63, 65-69
+//      - originator_visit_id: 55-56, 58-59, 61-63, 65-69
+//      - publicly_routable: 43-45, 48
+//      - segment_id: 20, 22-23, 28-30, 32-33, 36-45, 48, 50-51, 53, 55-56,
+//      58-59, 61-63, 65-69
+//      - transition: 20, 22-23, 28-30, 32-33, 36-45, 48, 50-51, 53, 55-56,
+//      58-59, 61-63, 65-69
+//      - url: 20, 22-23, 28-30, 32-33, 36-45, 48, 50-51, 53, 55-56, 58-59,
+//      61-63, 65-69
+//      - visit_duration: 22-23, 28-30, 32-33, 36-45, 48, 50-51, 53, 55-56,
+//      58-59, 61-63, 65-69
+//      - visit_time: 20, 22-23, 28-30, 32-33, 36-45, 48, 50-51, 53, 55-56,
+//      58-59, 61-63, 65-69
+//      - visited_link_id: 67-69
+//
+// =-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=
 
 namespace
 {
