@@ -66,6 +66,7 @@ ANTS = [
 
 LOADERS = [
     "app-ares",
+    "app-chromium",
     "app-emule",
     "app-emuletorrent",
     "app-shareaza",
