@@ -2,8 +2,12 @@ Mobius Forensic Toolkit 2.17
 	* Added new C++ extension called "app-chromium"
 	* app-chromium: Retrieve autofill_entry.date_created for versions < 55
 	* app-chromium: Retrieve autofill_profiles as User Accounts
+	* app-chromium: Retrieve credit cards info
 	* evidence-viewer: Added attribute "names" to User Accounts
+	* evidence-viewer: Added new evidence type "Application profile"
 	* libmobius_core: Added new function mobius::string::join
+	* ant.evidence.vfs: Changed to call app-chromium evidence loader
+	* ant.evidence.vfs.visited_urls: Removed old Chromium code
 
 Mobius Forensic Toolkit 2.16
 	* Added new C++ extension called "post-processor-pdi"
